--- a/firebase-code/index.html
+++ b/firebase-code/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="./loader.css" />
   </head>
+
   <body>
     <header>
       <div class="menu-nav">
-        <button class="close-icon" aria-checked="false">
+        <button class="close-icon hide-when-signed-out" aria-checked="false">
           <svg viewBox="0 0 24 24" class="close_icon" width="24" height="24">
             <path
               fill="currentColor"
@@ -20,7 +21,7 @@
           </svg>
         </button>
 
-        <button class="menu-icon" aria-checked="false">
+        <button class="menu-icon hide-when-signed-out" aria-checked="false">
           <svg width="24" height="24" viewBox="0 0 24 24">
             <path
               fill="currentColor"
@@ -46,11 +47,15 @@
           <span class="links auth" auth="sign-in">Sign In</span>
         </div>
         <div class="user-nav__item hide-when-signed-out">
-          <button class="links auth" auth="sign-out"><b>Sign Out</b></button>
+          <button class="links auth signout" auth="sign-out">Sign Out</button>
         </div>
         <div class="user-nav__item">
           <button id="switch" onclick="toggleTheme()">
-            <img class="toggle-state-icon" src="./assets/sun.svg" alt="Toggle Icon">
+            <img
+              class="toggle-state-icon"
+              src="./assets/sun.svg"
+              alt="Toggle Icon"
+            />
           </button>
         </div>
       </nav>
@@ -66,12 +71,12 @@
             Email:
             <input
               type="email"
-              className=""
+              class=""
               id="signin-email"
               name="email"
               required
             />
-            <div className="input-feedback-i1"></div>
+            <div class="input-feedback-i1"></div>
           </label>
 
           <label>
@@ -79,15 +84,15 @@
             <input
               type="password"
               id="signin-password"
-              className=""
+              class=""
               name="password"
               required
             />
-            <div className="input-feedback-i2"></div>
+            <div class="input-feedback-i2"></div>
           </label>
 
           <button type="submit">Submit</button>
-          <div className="input-feedback-i3"></div>
+          <div class="signin-auth-error"></div>
         </form>
       </div>
 
@@ -96,70 +101,80 @@
         <h3>Sign Up</h3>
         <form>
           <div class="inline">
-            <label>
+            <label for="signup-firstname" class="fname">
               Firstname:
               <input
                 type="text"
-                className=""
+                class="fname"
                 id="signup-firstname"
                 name="firstname"
                 required
               />
-              <div className="input-feedback"></div>
+              <div class="input-feedback"></div>
             </label>
 
-            <label>
+            <label for="signup-lastname" class="lname">
               Lastname:
               <input
                 type="text"
-                className=""
+                class="lname"
                 id="signup-lastname"
                 name="lastname"
                 required
               />
-              <div className="input-feedback"></div>
+              <div class="input-feedback"></div>
             </label>
           </div>
 
-          <label>
+          <label for="signup-username">
             Username:
             <input
               type="text"
-              className=""
+              class=""
               id="signup-username"
               name="username"
               required
             />
-            <div className="input-feedback"></div>
+            <div class="input-feedback"></div>
           </label>
 
-          <label>
+          <label for="signup-email">
             Email:
             <input
               type="email"
-              className=""
+              class=""
               id="signup-email"
               name="email"
               required
             />
-            <div className="input-feedback"></div>
+            <div class="input-feedback"></div>
           </label>
 
-          <label>
+          <label for="signup-password">
             Password:
             <input
               type="password"
               id="signup-password"
-              className=""
+              class=""
               name="password"
               required
             />
-            <div className="input-feedback"></div>
+            <div class="input-feedback"></div>
           </label>
 
           <button type="submit">Submit</button>
-          <div className="input-feedback"></div>
+          <div class="signup-auth-error"></div>
         </form>
+      </div>
+
+      <!-- Loading visual cue -->
+      <div id="loading-outer-container" class="spinner">
+        <div id="loading-inner-container">
+          <div id="loadspin">
+            <div id="circle1"></div>
+            <div id="circle2"></div>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -172,10 +187,21 @@
             <div class="side-nav__item__header">
               <span>
                 <button class="home-btn">
-                  <svg class="home" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M16.59 8.29501L12 12.875L7.41 8.29501L6 9.70501L12 15.705L18 9.70501L16.59 8.29501Z" fill="#e2e2e2"
-                      fill-opacity="0.54" />
-                  </svg>                </button>
+                  <svg
+                    class="home"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M16.59 8.29501L12 12.875L7.41 8.29501L6 9.70501L12 15.705L18 9.70501L16.59 8.29501Z"
+                      fill="#e2e2e2"
+                      fill-opacity="0.54"
+                    />
+                  </svg>
+                </button>
                 <span>Home</span>
               </span>
             </div>
@@ -189,9 +215,18 @@
                     src="./assets/arrowdown.svg"
                     alt="check button"
                   /> -->
-                  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M16.59 8.29501L12 12.875L7.41 8.29501L6 9.70501L12 15.705L18 9.70501L16.59 8.29501Z" fill="#e2e2e2"
-                      fill-opacity="0.54" />
+                  <svg
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M16.59 8.29501L12 12.875L7.41 8.29501L6 9.70501L12 15.705L18 9.70501L16.59 8.29501Z"
+                      fill="#e2e2e2"
+                      fill-opacity="0.54"
+                    />
                   </svg>
                 </button>
                 <span>Projects</span>
@@ -199,8 +234,18 @@
 
               <button class="add-modal-btn">
                 <!-- <img src="./assets/plus.svg" alt="plus icon" /> -->
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M19 13H13V19H11V13H5V11H11V5H13V11H19V13Z" fill="" fill-opacity="0.54" />
+                <svg
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M19 13H13V19H11V13H5V11H11V5H13V11H19V13Z"
+                    fill=""
+                    fill-opacity="0.54"
+                  />
                 </svg>
               </button>
             </div>
@@ -264,11 +309,21 @@
             </form>
             <p class="todos-intro__btn">
               <span>
-                <svg xmlns="http://www.w3.org/2000/svg" width="13" height="13" viewBox="0 0 13 13" data-svgs-path="sm1/plus.svg">
-                  <path fill="currentColor" fill-rule="evenodd"
-                    d="M6 6V.5a.5.5 0 0 1 1 0V6h5.5a.5.5 0 1 1 0 1H7v5.5a.5.5 0 1 1-1 0V7H.5a.5.5 0 0 1 0-1H6z"></path>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="13"
+                  height="13"
+                  viewBox="0 0 13 13"
+                  data-svgs-path="sm1/plus.svg"
+                >
+                  <path
+                    fill="currentColor"
+                    fill-rule="evenodd"
+                    d="M6 6V.5a.5.5 0 0 1 1 0V6h5.5a.5.5 0 1 1 0 1H7v5.5a.5.5 0 1 1-1 0V7H.5a.5.5 0 0 1 0-1H6z"
+                  ></path>
                 </svg>
-              </span> Add Task
+              </span>
+              Add Task
             </p>
           </div>
           <form action="#" class="add-todo">
@@ -283,11 +338,21 @@
         </section>
 
         <div class="welcome-msg">
-          <img src="./assets/checkbox.png" alt="Tracker Icon">
+          <img src="./assets/checkbox.png" alt="Tracker Icon" />
           <p>
             Keep Track of your Goals.
           </p>
           <button class="add-goal-btn">Add a Goal Today</button>
+        </div>
+
+        <!-- Loading visual cue -->
+        <div id="loader-outer-container" class="spinner">
+          <div id="loader-inner-container">
+            <div id="loaderspin">
+              <div id="loader-circle1"></div>
+              <div id="loader-circle2"></div>
+            </div>
+          </div>
         </div>
       </main>
     </section>
@@ -351,16 +416,6 @@
       </div>
     </div>
 
-    <!-- Loading visual cue -->
-    <div id="loading-outer-container" class="spinner">
-      <div id="loading-inner-container">
-        <div id="loadspin">
-          <div id="circle1"></div>
-          <div id="circle2"></div>
-        </div>
-      </div>
-    </div>
-
     <script>
       // function to set a given theme/color-scheme
       function setTheme(themeName) {
@@ -370,25 +425,29 @@
       // function to toggle between light and dark theme
       function toggleTheme() {
         if (localStorage.getItem("theme") === "theme-dark") {
-          document.querySelector('img.toggle-state-icon').src = './assets/sun.svg';
+          document.querySelector("img.toggle-state-icon").src =
+            "./assets/sun.svg";
           setTheme("theme-light");
         } else {
-          document.querySelector('img.toggle-state-icon').src = './assets/half-moon.svg';
+          document.querySelector("img.toggle-state-icon").src =
+            "./assets/half-moon.svg";
           setTheme("theme-dark");
         }
       }
       // Immediately invoked function to set the theme on initial load
       (function () {
         if (localStorage.getItem("theme") === "theme-dark") {
-          document.querySelector('img.toggle-state-icon').src = './assets/half-moon.svg';
+          document.querySelector("img.toggle-state-icon").src =
+            "./assets/half-moon.svg";
 
           setTheme("theme-dark");
         } else {
-          document.querySelector('img.toggle-state-icon').src = './assets/sun.svg';
+          document.querySelector("img.toggle-state-icon").src =
+            "./assets/sun.svg";
 
           setTheme("theme-light");
         }
-      })();     
+      })();
     </script>
     <script src="auth.js"></script>
     <script src="script.js"></script>
